--- a/src/app/patient/patient-form/patient-form.component.html
+++ b/src/app/patient/patient-form/patient-form.component.html
@@ -18,12 +18,7 @@
       </ion-label>
     </ion-item-divider>
     <ion-item>
-      <ion-datetime
-        formControlName="dob"
-        display-format="MMM DD, YYYY HH:mm"
-        placeholder="Select Date of Birth"
-        [max]="todaysDate"
-      ></ion-datetime>
+      <ion-datetime formControlName="dob" display-format="MMM DD, YYYY" placeholder="Select Date of Birth"></ion-datetime>
     </ion-item>
     <ion-item-divider>
       <ion-label>
