--- a/src/app/welcome/welcome.page.scss
+++ b/src/app/welcome/welcome.page.scss
@@ -25,6 +25,7 @@
         font-weight: 600;
         font-family: cursive;
         color: var(--ion-color-primary);
+        text-align: center;
       }
     }
   }
