--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -18,7 +18,7 @@ $autumn: (
   dark: #B89876
 );
 $night: (
-  primary: #8CBA80,
+  primary: #8cc63e,
   secondary: #FCFF6C,
   tertiary: #FE5F55,
   medium: #BCC2C7,
