--- a/src/app/doctors/doctor-form/doctor-form.component.html
+++ b/src/app/doctors/doctor-form/doctor-form.component.html
@@ -54,7 +54,7 @@
         </ion-label>
       </ion-item-divider>
       <ion-item>
-        <ion-datetime formControlName="joinedDate" display-format="MMM DD, YYYY HH:mm" placeholder="Select Date of Joining" [min]='todaysDate'></ion-datetime>
+        <ion-datetime formControlName="joinedDate" display-format="MMM DD, YYYY" placeholder="Select Date of Joining"></ion-datetime>
       </ion-item>
       <ion-item-divider>
         <ion-label>
@@ -64,7 +64,7 @@
         </ion-label>
       </ion-item-divider>
       <ion-item>
-        <ion-datetime formControlName="dob" display-format="MMM DD, YYYY HH:mm" placeholder="Select Date of Birth" [max]='todaysDate'></ion-datetime>
+        <ion-datetime formControlName="dob" display-format="MMM DD, YYYY" placeholder="Select Date of Birth"></ion-datetime>
       </ion-item>
       <ion-item-divider>
         <ion-label>
