--- a/src/app/patient/family-form/family-form.component.html
+++ b/src/app/patient/family-form/family-form.component.html
@@ -54,7 +54,7 @@
           </ion-label>
         </ion-item-divider>
         <ion-item>
-          <ion-datetime formControlName="dob" display-format="MMM DD, YYYY HH:mm" placeholder="Select Date of Birth" [max]='todaysDate'></ion-datetime>
+          <ion-datetime formControlName="dob" display-format="MMM DD, YYYY" placeholder="Select Date of Birth"></ion-datetime>
         </ion-item>
       </form>
     </ion-list>
