--- a/src/app/shared/components/device-connect/device-connect.component.html
+++ b/src/app/shared/components/device-connect/device-connect.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color='success'>
+  <ion-toolbar color="success">
     <ion-buttons slot="start">
       <ion-button>
         <ion-icon slot="icon-only" name="person"></ion-icon>
@@ -15,15 +15,42 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ion-card *ngFor="let device of getStatuses()|async">
+  <ion-card *ngFor="let device of (getDevices() | async)" padding>
     <ion-item>
       <ion-avatar slot="start">
         <img src="/assets/iot.png" />
       </ion-avatar>
       <ion-label>
-        <p>Patient:{{ device.PatientName }}</p>
-        <p>Status : {{device.Status}}</p>
+        <p>Connection Status : {{ device.Status ? device.Status : "Not Connected" }}</p>
+        <p *ngIf="device.Status == 'success'">Result : {{ device.Result | json }}</p>
+        <ng-container *ngIf="device.Status == 'success'">
+          <p>{{checkTemp(device)}}</p>
+          <p>{{checkPressure(device)}}</p>
+          <p>{{checkHeartRate(device)}}</p>
+        </ng-container>
       </ion-label>
     </ion-item>
+    <ion-item [routerLink]="['/patient/', device.Uid]" detail>
+      <ion-avatar slot="start">
+        <img src="/assets/patient.png" />
+      </ion-avatar>
+      <ion-label text-wrap>
+        <p>Patient Name : {{ device?.FullName }}</p>
+      </ion-label>
+    </ion-item>
+    <ion-fab vertical="bottom" horizontal="end">
+      <ion-fab-button>
+        <ion-icon name="more"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-list side="start">
+        <ion-fab-button (click)="setThreshold(device)" color="danger">
+          <ion-icon name="alert"></ion-icon>
+        </ion-fab-button>
+
+        <ion-fab-button color="secondary" (click)="connect(device)">
+          <ion-icon name="checkmark-circle"></ion-icon>
+        </ion-fab-button>
+      </ion-fab-list>
+    </ion-fab>
   </ion-card>
 </ion-content>
