--- a/src/app/shared/components/device-connect/device-connect.component.html
+++ b/src/app/shared/components/device-connect/device-connect.component.html
@@ -15,42 +15,67 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ion-card *ngFor="let device of (getDevices() | async)" padding>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="/assets/iot.png" />
-      </ion-avatar>
-      <ion-label>
-        <p>Connection Status : {{ device.Status ? device.Status : "Not Connected" }}</p>
-        <p *ngIf="device.Status == 'success'">Result : {{ device.Result | json }}</p>
-        <ng-container *ngIf="device.Status == 'success'">
-          <p>{{checkTemp(device)}}</p>
-          <p>{{checkPressure(device)}}</p>
-          <p>{{checkHeartRate(device)}}</p>
+    <ng-container *ngIf="(data$ | async) as res">
+        <ng-container *ngIf="res.data; else notificationTemplate">
+          <div class="position-relative">
+              <ion-card *ngFor="let device of res.data" >
+                  <ion-item>
+                    <ion-avatar slot="start">
+                      <img src="/assets/iot.png" />
+                    </ion-avatar>
+                    <ion-label text-wrap>
+                      <p>{{ device.Status ? device.Status : "Not Connected" }}</p>
+                    </ion-label>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label text-wrap>
+                      <!-- <p *ngIf="device.Status == 'success'">Result : {{ device.Result | json }}</p> -->
+                      <ng-container *ngIf="device.Status == 'success'">
+                        <p>{{ checkTemp(device) }}</p>
+                        <p>{{ checkPressure(device) }}</p>
+                        <p>{{ checkHeartRate(device) }}</p>
+                      </ng-container>
+                    </ion-label>
+                  </ion-item>
+                  <ion-item [routerLink]="['/patient/', device.Uid]" detail>
+                    <ion-avatar slot="start">
+                      <img src="/assets/patient.png" />
+                    </ion-avatar>
+                    <ion-label text-wrap>
+                      <p>Patient Name : {{ device?.FullName }}</p>
+                    </ion-label>
+                  </ion-item>
+                  <ion-fab vertical="bottom" horizontal="end">
+                    <ion-fab-button>
+                      <ion-icon name="more"></ion-icon>
+                    </ion-fab-button>
+                    <ion-fab-list side="start">
+                      <ion-fab-button (click)="setThreshold(device)" color="danger">
+                        <ion-icon name="alert"></ion-icon>
+                      </ion-fab-button>
+              
+                      <ion-fab-button color="secondary" (click)="connect(device)">
+                        <ion-icon name="checkmark-circle"></ion-icon>
+                      </ion-fab-button>
+                    </ion-fab-list>
+                  </ion-fab>
+                </ion-card>
+          </div>
         </ng-container>
-      </ion-label>
-    </ion-item>
-    <ion-item [routerLink]="['/patient/', device.Uid]" detail>
-      <ion-avatar slot="start">
-        <img src="/assets/patient.png" />
-      </ion-avatar>
-      <ion-label text-wrap>
-        <p>Patient Name : {{ device?.FullName }}</p>
-      </ion-label>
-    </ion-item>
-    <ion-fab vertical="bottom" horizontal="end">
-      <ion-fab-button>
-        <ion-icon name="more"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-list side="start">
-        <ion-fab-button (click)="setThreshold(device)" color="danger">
-          <ion-icon name="alert"></ion-icon>
-        </ion-fab-button>
-
-        <ion-fab-button color="secondary" (click)="connect(device)">
-          <ion-icon name="checkmark-circle"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-  </ion-card>
+        <ng-template #notificationTemplate>
+          <ng-container *ngIf="res.error || res.empty; else loadingTemplate">
+            <div class="item-center" [hidden]="!res.error">
+              Something went wrong , Try again later .
+            </div>
+            <div class="item-center" [hidden]="!res.empty">
+              List is empty.
+            </div>
+          </ng-container>
+          <ng-template #loadingTemplate>
+            <div class="item-center">
+              <ion-spinner name="lines"></ion-spinner>
+            </div>
+          </ng-template>
+        </ng-template>
+      </ng-container>
 </ion-content>
