--- a/src/app/doctors/doctors.page.html
+++ b/src/app/doctors/doctors.page.html
@@ -29,7 +29,7 @@
           Something went wrong , Try again later .
         </div>
         <div class="item-center" [hidden]="!res.empty">
-          List is empty.
+          Nothing to display
         </div>
       </ng-container>
       <ng-template #loadingTemplate>
