--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="bg-secondary h-100 content-center">
+  <div class="bg-secondary content-center">
     <div class="col-grid">
       <!--trips-->
       <ion-card class="col-item" [routerLink]="['/patients']" *ngIf="(userService.isHospital$ | async)">
