--- a/src/app/shared/components/view-notification/view-notification.component.html
+++ b/src/app/shared/components/view-notification/view-notification.component.html
@@ -38,12 +38,12 @@
                   <p>Patient Name : {{ data.Patient?.FullName }}</p>
                 </ion-label>
               </ion-item>
-              <ion-item *ngIf="data.Type == 2" (click)="viewPatient(data.From?.Uid)" detail>
+              <ion-item *ngIf="data.Type == 2" (click)="viewPatient(data.To?.Uid)" detail>
                 <ion-avatar slot="start">
                   <img src="/assets/patient.png" />
                 </ion-avatar>
                 <ion-label text-wrap>
-                  <p>Patient Name : {{ data.From?.FullName }}</p>
+                  <p>Patient Name : {{ data.To?.FullName }}</p>
                 </ion-label>
               </ion-item>
             </ng-container>
